@@ -1,3 +1,8 @@
+2007-09-24  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-buildpackage.pl ($warnable_errors): Rename to ...
+	($warnable_error): ... this, and declare as 'our'.
+
 2007-09-23  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: Add new option
